# dinner-optimizer

./: .$Architecture.drawio.bkp  .gitignore  Architecture.drawio  Design notes.md  LICENSE  README.md  Todo list.md  buildspec.yml  deploy.sh  messages  samconfig.toml  template.yaml
events/: user_message.json  user_message_from_self.json
menu_suggester/: pyproject.toml
menu_suggester/src/menu_suggester/: app.py  priming_instruction.txt  requirements.txt
paprika_fetcher/: pyproject.toml
paprika_fetcher/src/paprika_fetcher/: app.py  requirements.txt
paprika_fetcher/tests/: test_paprika_fetcher.py
scripts/: add_channel_id_to_dynamo.py  migrate_to_monday.py
shared/: pyproject.toml
shared/src/dinner_optimizer_shared/: credentials_handler.py  interaction.py  message_persistence.py  requirements.txt  time_utils.py
shared/tests/: test_message_persistence.py  test_time_utils.py
tests/unit/: test_handler.py
upcoming_reminder/: pyproject.toml
upcoming_reminder/src/upcoming_reminder/: app.py  requirements.txt
upcoming_reminder/tests/: test_upcoming_reminder.py
user_response_recorder/: pyproject.toml
user_response_recorder/events/: user_response_sqs_event.json
user_response_recorder/src/user_response_recorder/: app.py  requirements.txt
