[tool.poetry]
name = "menu-suggester"
version = "0.1.0"
description = "Suggests meals for the user based on preferences and special requests for the week"
authors = ["Matthew Unrath <matthew.unrath@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
openai = "1.2.3"
python-dotenv = "^1.0.0"
slack-sdk = "^3.21.3"
boto3 = "^1.28.53"
dinner-optimizer-shared = {path = "../shared", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
