[tool.poetry]
name = "dinner-optimizer-shared"
version = "0.1.0"
description = ""
authors = ["Matthew Unrath <matthew.unrath@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.56"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
