[tool.poetry]
name = "dinner-optimizer-shared"
version = "0.1.0"
description = ""
authors = ["Matthew Unrath <matthew.unrath@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.28.56"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.11.1"
pytest = "^7.4.2"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
