[tool.poetry]
name = "user-response-recorder"
version = "0.1.0"
description = "When users respond with requests or tweaks, records it to storage and sets a timer to respond if applicable"
authors = ["Matthew Unrath <matthew.unrath@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
slack-sdk = "^3.21.3"
dinner-optimizer-shared = {path = "../shared", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
